fix(website): Fix sizing on smaller screens

--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -6,7 +6,7 @@
         padding-left: 140px;
         padding-right: 140px;
 
-        @media screen and (max-width: 500px){
+        @media screen and (max-width: 630px){
             padding-left: 20px;
             padding-right: 20px;
             font-size: 1.5rem;
